Source/WebCore/contentextensions/DFA.h
@@ -39,6 +39,7 @@ namespace ContentExtensions {
 // The DFA abstract a partial DFA graph in a compact form.
 struct WEBCORE_EXPORT DFA {
     void minimize();
+    unsigned graphSize() const;
     size_t memoryUsed() const;
 
 #if CONTENT_EXTENSIONS_STATE_MACHINE_DEBUGGING
